[gd_scene load_steps=15 format=3 uid="uid://doewqwkpp1fq4"]

[ext_resource type="Script" path="res://scenes/ui/DialogPlayer.gd" id="1_a01fv"]
[ext_resource type="Texture2D" uid="uid://drlgmcjmvfdwi" path="res://assets/static/9patchdev.png" id="1_jhxjg"]
[ext_resource type="FontFile" uid="uid://dlcwuyt2vucmr" path="res://assets/fonts/alagard.ttf" id="3_fs6kp"]
[ext_resource type="Texture2D" uid="uid://baljkblx7v73o" path="res://assets/sprites/ui/dialog-button.png" id="4_0easi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1dh4o"]
atlas = ExtResource("4_0easi")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_voo8h"]
atlas = ExtResource("4_0easi")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqtoo"]
atlas = ExtResource("4_0easi")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs5yj"]
atlas = ExtResource("4_0easi")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs0ja"]
atlas = ExtResource("4_0easi")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_30bth"]
atlas = ExtResource("4_0easi")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhme3"]
atlas = ExtResource("4_0easi")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_12u7r"]
atlas = ExtResource("4_0easi")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_3r51c"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_1dh4o")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_voo8h")
}],
"loop": true,
"name": &"complete",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqtoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs5yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs0ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30bth")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_jhme3")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_12u7r")
}],
"loop": true,
"name": &"progress",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwx72"]
size = Vector2(1920, 1080)

[node name="DialogPlayer" type="CanvasLayer"]
script = ExtResource("1_a01fv")

[node name="Background" type="NinePatchRect" parent="."]
offset_left = 128.0
offset_top = 832.0
offset_right = 1792.0
offset_bottom = 960.0
texture = ExtResource("1_jhxjg")
region_rect = Rect2(-0.324875, -0.898636, 199.326, 200.174)
patch_margin_left = 15
patch_margin_top = 17
patch_margin_right = 16
patch_margin_bottom = 15

[node name="TextLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 848.0
offset_right = 1712.0
offset_bottom = 944.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_fs6kp")
theme_override_font_sizes/font_size = 48
autowrap_mode = 3
visible_characters_behavior = 1

[node name="DialogStatusIndicator" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(1760, 928)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_3r51c")
animation = &"progress"

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(960, 540)
shape = SubResource("RectangleShape2D_pwx72")
metadata/_edit_lock_ = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
